<resources>
    <string name="app_name">lab1</string>
    <string name="text">Text For Button</string>
    <string name="image">In our situation it is need only to avoid warning</string>
    <string name="_1">1</string>
    <string name="_2">2></string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>

</resources>