<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/app_name"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center"
        android:backgroundTint="@color/black"
        android:layout_weight="1"
        android:text="@string/text"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="150dp"
        android:layout_weight="1"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/image"/>


</LinearLayout>
