<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.60" />

        <TextView
            android:id="@+id/view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintStart_toEndOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:text="@string/_1"/>

        <ImageView
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/temp2"
            app:layout_constraintBottom_toTopOf="@id/view3"
            android:contentDescription="@string/image" />

        <Button
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_3"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintTop_toBottomOf="@id/view2"
            app:layout_constraintBottom_toTopOf="@id/view4"
            app:layout_constraintEnd_toStartOf="@id/guideline2" />

        <TextView
            android:id="@+id/view4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#800020"
            android:gravity="center_horizontal"
            android:text="@string/_4"
            android:textColor="#FF80AB"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/view3" />

        <TextView
            android:id="@+id/view5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_5"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintBottom_toTopOf="@id/view6"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@id/view3"/>
        <TextView
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_6"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/view7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/_7"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view2"
            app:layout_constraintStart_toEndOf="@id/guideline1"
            app:layout_constraintBottom_toBottomOf="@id/view3"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>